--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
 
     - name: Build project
-      run: npm run build
+      run: npm start
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
