--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -1,12 +1,10 @@
-name: Build and Deploy to Azure
-
 on:
   push:
     branches:
       - main
 
 jobs:
-  build-and-deploy:
+  deploy-node-app:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,6 +22,6 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: expense-tracker-25   
+        app-name: expense-tracker-25
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ./build
+        package: .
